<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/backgroundforandroidapp"
    tools:context=".MainActivity">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout"/>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon = "@drawable/Play"
        android:background="@color/white"
        android:layout_below="@+id/tabLayout"
        />
    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon = "@drawable/Pause"
        android:layout_below="@+id/btnPlay"
        android:background="@color/white"
        />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabGravity="fill"
        app:tabIndicator="?colorPrimary"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/toppng_com_sign_of_the_horns_rock_music_gesture_hand_transparent_rock_hand_si_1521x2452"
            android:text="@string/rock" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/musician_classical_music_musical_instruments_people_music_84d856c5395364a87143e5b863abdfdf"
            android:text="@string/classic" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/pinclipart_com_dance_shoes_clipart_371117"
            android:text="@string/pop" />

    </com.google.android.material.tabs.TabLayout>


</RelativeLayout>